Fix homepage attribution alignment.

--- a/styles/HomePage.module.css
+++ b/styles/HomePage.module.css
@@ -73,13 +73,18 @@
 
 .attribution {
 	display: flex;
-	justify-content: center;
-	align-items: center;
 	font-size: 2rem;
 	font-family: CleanFont;
 }
 
+.attributionInner {
+	margin: auto;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
 .attribution img {
-	display: block;
+	margin-top: 0.5em;  /* compensate for space taken up by "SHARE" text */
 	width: 3.5em;
 }
